--- a/manifest.json
+++ b/manifest.json
@@ -5,13 +5,13 @@
         {
             "purpose": "maskable",
             "sizes": "512x512",
-            "src": "https://alex1624.gitverse.site/260204_pwa/icon512_maskable.png",
+            "src": "icon512_maskable.png",
             "type": "image/png"
         },
         {
             "purpose": "any",
             "sizes": "512x512",
-            "src": "https://alex1624.gitverse.site/260204_pwa/icon512_rounded.png",
+            "src": "icon512_rounded.png",
             "type": "image/png"
         }
     ],
@@ -22,7 +22,6 @@
     "description": "Веб-студия",
     "name": "Веб-студия: создаем качественные сайты",
     "short_name": "Веб-студия",
-    "start_url": "https://alex1624.gitverse.site/260204_pwa/index.html",
-    "scope": "https://alex1624.gitverse.site/260204_pwa/",
+    "start_url": "/index.html",
     "id": "lsdhjkadkhy086lkujl"
 }
